inference-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inference-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inference-service
  template:
    metadata:
      labels:
        app: inference-service
    spec:
      containers:
        - name: inference-service
          image: yeseul01/inference-service:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: inference-service
spec:
  selector:
    app: inference-service
  ports:
    - port: 8080
      targetPort: 8080
