ksvc-ms-backend.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ms-backend
  namespace: ms-backend
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
        autoscaling.knative.dev/maxScale: "5"
        autoscaling.knative.dev/target: "50"
    spec:
      initContainers:
        - name: wait-for-database
          image: busybox:1.35
          command:
            [
              "sh",
              "-c",
              "until nc -z -w 2 database 5432; do echo 'Waiting for database...'; sleep 2; done",
            ]
      containers:
        - image: xxhyeok/ms-backend:latest
          ports:
            - containerPort: 8080
          env:
            - name: SPRING_PROFILES_ACTIVE
              value: prod
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://database:5432/cc-term
            - name: SPRING_DATASOURCE_USERNAME
              value: user
            - name: SPRING_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: ms-backend-secrets
                  key: postgres-password
            - name: APP_JWT_SECRET
              valueFrom:
                secretKeyRef:
                  name: ms-backend-secrets
                  key: app-jwt-secret
            - name: INTERNAL_INFERENCE_URL
              value: http://inference-service.ms-inference.svc.cluster.local:8081
            - name: EXTERNAL_AI_IMAGE_URL
              value: http://ai-image-serving-predictor.ms-models.svc.cluster.local/v1/models/mobilenet:predict
            - name: EXTERNAL_AI_IMAGE_HOST
              value: ai-image-serving-predictor.ms-models.svc.cluster.local
            - name: EXTERNAL_AI_TEXT_URL
              value: http://ai-text-serving-predictor.ms-models.svc.cluster.local/v1/models/kobart-summary:predict
            - name: EXTERNAL_AI_TEXT_HOST
              value: ai-text-serving-predictor.ms-models.svc.cluster.local
