ocr-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocr-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocr-api
  template:
    metadata:
      labels:
        app: ocr-api
    spec:
      containers:
        - name: ocr-api
          image: yeseul01/ocr-api:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: ocr-api
spec:
  selector:
    app: ocr-api
  ports:
    - port: 9000
      targetPort: 9000
