postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: ms-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          emptyDir: {} #개발용. 영구저장하려면 PVC로 교체!
---
apiVersion: v1
kind: Service
metadata:
  name: database  #Knative에서 사용하는 도메인에 대응됨
  namespace: ms-backend
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP  # 내부 연결이므로 ClusterIP로 충분함
