ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-platform-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - http:
        paths:
          - path: /ocr
            pathType: Prefix
            backend:
              service:
                name: ocr-api
                port:
                  number: 9000
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: inference-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inference-service
                port:
                  number: 8080
